# MEng_Project

./: .gitignore  .gitmodules  README.md  pubspec.yaml
BLE-STT/: pubspec.yaml
BLE-STT/android/app/src/debug/: AndroidManifest.xml
BLE-STT/android/app/src/main/kotlin/com/example/ble_stt/: WhiperStreamController.kt  WhisperNative.kt
BLE-STT/lib/screens/: ble_connection_page.dart  offline_stt_page.dart
BLE-STT/lib/services/: ble_service.dart
BLE-STT/lib/widgets/: stt_control_button.dart  transcript_display.dart
BLE-STT/linux/: CMakeLists.txt
BLE-STT/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
BLE-STT/macos/Runner/Configs/: AppInfo.xcconfig
BLE-STT/web/: manifest.json
BLE-STT/windows/runner/: main.cpp
android/app/: build.gradle.kts
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
android/app/src/main/kotlin/com/example/ble_stt/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: ble_connection_page.dart  offline_stt_page.dart
lib/services/: ble_service.dart  whisper_stt_service.dart
lib/widgets/: transcript_display.dart
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc
